[project]
name = "lora-code"
version = "0.1.0"
description = "Code to send and receive data between two Raspi."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpiozero>=2.0.1",
    "paho-mqtt>=2.1.0",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "rpi-lgpio>=0.6",
]
